--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <div id="footer">
         <div class="container">
             <div class="row ">
-                &copy; 2020 www.sagarmv.com | All Right Reserved 				
+                &copy; 2020 https://sagar-mv.github.io/Sagar-s-Portfolio/ | All Right Reserved 				
 		
             </div>
             
